--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "tsc -w",
-    "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js",
-    "dev2": "nodemon --exec ts-node src/index.ts",
-    "start2": "ts-node src/index.ts"
+    "watch": "run-p watch-ts watch-js",
+    "watch-ts": "tsc -w",
+    "watch-js": "nodemon dist/index.js",
+    "dev": "ts-node src/index.ts"
   },
   "repository": "git@github.com:kanokgan/fullstack-training.git",
   "author": "Kanokgan Hanmungtham <kanokgan@gmail.com>",
@@ -16,6 +15,7 @@
   "devDependencies": {
     "@types/node": "^14.10.1",
     "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   }
