--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
     "npm-run-all": "^4.1.5",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "@mikro-orm/cli": "^4.0.5",
+    "@mikro-orm/migrations": "^4.0.5",
+    "@mikro-orm/postgresql": "^4.0.5",
+    "pg": "^8.3.3"
   }
 }
